--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,26 @@
 {
-	"manifest_version": 2,
-	"name": "Rave",
-	"description": "This extension is for injecting CSS and javascript in Rave",
-	"version": "1.0",
-	"icons": {
-		"128": "img/favicon.png"
+	"background": {
+		"persistent": false,
+		"scripts": [ "js/background.js" ]
+	},
+	"browser_action": {
+		"default_icon": "img/icon.png",
+		"default_title": "Rave"
 	},
 	"content_scripts": [
 		{
-			"matches": [ "https://beta.rave.office.net/*", "https://rave.office.net/*" ],
 			"css": [ "css/main.css" ],
-			"js": [ "js/jquery-3.3.1.slim.min.js", "js/main.js" ]
+			"js": [ "js/jquery-3.3.1.slim.min.js", "js/main.js" ],
+			"matches": [ "https://beta.rave.office.net/*", "https://rave.office.net/*" ],
+			"run_at": "document_idle"
 		}
 	],
-	"page_action": {
-		"default_icon": "img/favicon.png",
-		"default_popup": "popup.html"
+	"description": "This extension is for injecting CSS and javascript in Rave",
+	"icons": {
+		"128": "img/icon.png"
 	},
-	"permissions": [ "activeTab" ]
+	"manifest_version": 2,
+	"name": "Rave",
+	"permissions": [ "tabs", "activeTab" ],
+	"version": "1.0"
 }
