--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,28 @@
 {
-	"background": {
-		"scripts": [ "js/background.js" ]
-	},
-	"browser_action": {
-		"default_icon": "img/icon.png",
-		"default_title": "Rave"
-	},
-	"content_scripts": [
-		{
-			"css": [ "css/main.css" ],
-			"js": [ "js/jquery-3.3.1.slim.min.js", "js/main.js" ],
-			"matches": [ "https://beta.rave.office.net/*", "https://rave.office.net/*" ],
-			"run_at": "document_idle"
-		}
-	],
-	"description": "This extension is for injecting CSS and javascript in Rave",
-	"icons": {
-		"128": "img/icon.png"
-	},
-	"manifest_version": 2,
-	"name": "Rave",
-	"permissions": [ "contextMenus", "tabs", "activeTab" ],
-	"version": "1.0"
+  "background": {
+    "scripts": ["js/background.js"]
+  },
+  "browser_action": {
+    "default_icon": "img/favicon.png",
+    "default_title": "DJ Rave"
+  },
+  "content_scripts": [
+    {
+      "css": ["css/content.css"],
+      "js": ["js/jquery-3.3.1.slim.min.js", "js/content.js"],
+      "matches": [
+        "https://beta.rave.office.net/*",
+        "https://rave.office.net/*"
+      ],
+      "run_at": "document_idle"
+    }
+  ],
+  "description": "Adds new logo, new theme, wide layout, context-menu search, helpful links, toggle panels, toggle proposed solution, fixes the Add button",
+  "icons": {
+    "128": "img/favicon.png"
+  },
+  "manifest_version": 2,
+  "name": "DJ Rave",
+  "permissions": ["contextMenus", "tabs", "activeTab"],
+  "version": "3.2"
 }
