--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,9 @@
 {
 	"background": {
-		"persistent": false,
 		"scripts": [ "js/background.js" ]
 	},
 	"browser_action": {
-		"default_icon": "img/icon.png",
+		"default_icon": "img/favicon.png",
 		"default_title": "Rave"
 	},
 	"content_scripts": [
@@ -17,10 +16,10 @@
 	],
 	"description": "This extension is for injecting CSS and javascript in Rave",
 	"icons": {
-		"128": "img/icon.png"
+		"128": "img/favicon.png"
 	},
 	"manifest_version": 2,
 	"name": "Rave",
-	"permissions": [ "tabs", "activeTab" ],
+	"permissions": [ "contextMenus", "tabs", "activeTab" ],
 	"version": "1.0"
 }
